# AstroModel

./: README.md
src/: CMakeLists.txt  glad.c  main  main.c
src/includes/: buffer.h  gravity.h  particles.h  rk4.h  shader.h  sleep.h  vector.h
src/includes/glad/: glad.h
src/physic/: physicThread.c
src/physic/Gravity/: gravity.h  gravitySolver.c
src/physic/particles/: particle.c  particles.h
src/physic/rk4/: rk4.h  rungekutta4.c
src/render/shader/: shader.c
src/render/shader/GLSLcodes/: fragmentShader.glsl  vertexShader.glsl
src/utils/dynamicMem/: dynamicMem.c  dynamicMem.h
src/utils/sleep/: sleep.c
src/utils/vectors/: vector.c  vector.h
